# firmware-esp32

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  GEMINI.md  MIGRATION.md  Makefile  README.md  correct_firmware_hash.py  esp_idf_project_configuration.json  generate_secrets_cmake.py  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.matrixportal-s3  sdkconfig.defaults.matrixportal-s3-waveshare  sdkconfig.defaults.matrixportal-s3-wide  sdkconfig.defaults.patched  sdkconfig.defaults.pixoticker  sdkconfig.defaults.tidbyt-gen1  sdkconfig.defaults.tidbyt-gen1_swap  sdkconfig.defaults.tidbyt-gen2  sdkconfig.defaults.tronbyt-s3  sdkconfig.defaults.tronbyt-s3-wide  sdkconfig.defaults.waveshare-s3  sdkconfig.matrixportal-s3  sdkconfig.pixoticker  sdkconfig.tronbyt-S3.defaults  secrets.json  secrets.json.example  secrets_.json  secrets_place.json  string_replace_bin.py
.devcontainer/: devcontainer.json
.github/workflows/: main.yaml  main.yml  pull-request.yaml  pull-request.yml
boards/: default_8mb.csv  default_8mb_with_spiffs.csv  gen2.json  tronbyt-S3.json  wroom32.json
components/assets/: CMakeLists.txt  assets.h  config_c  windytron_c  windytron_config.xcf
components/esp32-wifi-manager/: CMakeLists.txt  Kconfig
components/esp32-wifi-manager/src/: code.js  dns_server.c  dns_server.h  http_app.c  http_app.h  index.html  nvs_sync.c  nvs_sync.h  style.css  wifi_manager.c  wifi_manager.h
components/libwebp/: CMakeLists.txt
components/simple-wifi-manager/: CMakeLists.txt  simple_wifi_manager.c
components/simple-wifi-manager/include/: simple_wifi_manager.h
data/: wifi.json
docs/: BRIGHTNESS.md  CPP_MIGRATION_PLAN.md  SUPPORT.md  VERSION_INJECTION.md
extra_scripts/: c.h_to_webp.py  patch_i2s_divider.py  post.py  pre.py  reset.py  string_replace_bin.py  webp_to_c.h.py
include/: c_wrapper.h
lib/HUB75/: library.json
lib/assets/: 404_c  assets.h  config_c  no_connect_c  noapps_webp.c  noapps_webp.c.tronbyt  oversize_c  single  tronbyt_config.xcf  tronbyt_error_webp.xcf
lib/webp/: library.json
lib/wifimanageresp32_local/: CMakeLists.txt  SPIFFSControler.cpp  WifiManagerEsp32.cpp  dnsRedirector.c  httpServer.cpp  jsonDecoder.cpp  library.json
lib/wifimanageresp32_local/include/: WifiManagerEsp32.hpp  customEvents.hpp  dnsRedirector.h  httpServer.hpp  indexHtml.h  jsonDecoder.hpp  script.h  spiffsControler.hpp  style.h
main/: CMakeLists.txt  Kconfig.projbuild  ap.c  ap.h  display.cpp  display.h  dns_wrapper.c  double_pendulum.cpp  double_pendulum.h  double_pendulum.hpp  flash.c  flash.h  font5x7.h  gfx.c  gfx.h  heap_monitor.c  idf_component.yml  main.c  main.cpp  nvs_settings.c  nvs_settings.h  ota.c  ota.h  raii_utils.hpp  remote.c  remote.h  sntp.c  sntp.h  sta_api.c  sta_api.h  syslog.c  syslog.h  touch_control.c  touch_control.h  version.h  wifi.c  wifi.h
main/config/: ap.cpp  ap.h  dns_wrapper.c  nvs_handle.h  nvs_settings.cpp  nvs_settings.h
main/display/: display.cpp
main/gfx/: gfx.h
main/network/: handlers.cpp  handlers.h  http_client.cpp  http_client.h  http_server.cpp  http_server.h  mdns.cpp  mdns.h  mdns_service.cpp  mdns_service.h  messages.cpp  messages.h  remote.cpp  remote.h  sockets.cpp  sockets.h  sta_api.cpp  sta_api.h  wifi.cpp  wifi.h  ws_client.cpp  ws_client.h
main/scheduler/: scheduler.cpp  scheduler.h
main/system/: console.cpp  console.h  embedded_tz_db.c  embedded_tz_db.h  heap_monitor.cpp  heap_monitor.h  ntp.cpp  ntp.h  ota.cpp  ota.h  sntp.cpp  sntp.h  syslog.cpp  syslog.h
main/webp_player/: webp_player.cpp  webp_player.h
src/: config.h  display.cpp  display.h  flash.h  gfx.c  gfx.h  idf_component.yml  main.c  main.cpp  ota.c  ota.h  remote.c  remote.h  version.h  wifi.c  wifi.h  wifi_manager_wrapper.cpp  wifi_manager_wrapper.h  ws_protocol.h
tests/: test_invariant_main.py
tools/: c.h_to_webp.py  correct_firmware_hash.py  patch_i2s_divider.py  string_replace_bin.py  webp_to_c.h.py
